# Nexuz

./: CMakeLists.txt  Nexuz.pro  Nexuz.qrc  README.md  camera  camera.cpp  img.raw  out.tiff  rec
doc/: README  TODO  protocol.vpp  protocol.vpp~1  protocol.vpp~2
gui/: Makefile  gui  gui.pro  test.cpp
src/: NexuzProtocol.hpp  include.hpp
src/Client/: Process.cpp  Process.hpp  include.hpp  main.cpp
src/Client/App/: Accounts.cpp  Accounts.hpp  App.cpp  App.hpp  Settings.cpp  Settings.hpp  StoredObjects.cpp  StoredObjects.hpp
src/Client/GUI/: MainWindow.cpp  MainWindow.hpp  main.cpp
src/Client/GUI/Helper/: GUI_Utils.cpp  GUI_Utils.hpp  LoadUI.cpp  LoadUI.hpp  Utils.cpp  Utils.hpp
src/Client/GUI/UI/: AddAccount.cpp  AddAccount.hpp  ManageAccounts.cpp  ManageAccounts.hpp  UI_AddAccount.cpp  UI_AddAccount.hpp  UI_Contacts.cpp  UI_Contacts.hpp  UI_ManageAccounts.cpp  UI_ManageAccounts.hpp  include.hpp
src/Client/GUI/UI/ChatWindow/: CustomChatWindow.cpp  CustomChatWindow.hpp  CustomQTextEdit.cpp  CustomQTextEdit.hpp  UI_ChatWindow.cpp  (+1 more)
src/Client/GUI/design/: About.ui  AddAccount.ui  ChatWindow.ui  Contacts.ui  MainWindow.ui  ManageAccounts.ui  Settings.ui  SetupAccounts.ui
src/Client/Media/SoundSystem/: AbstractDSP.hpp
src/Client/Network/: Connection.cpp  Connection.hpp  NetAccounts.cpp  NetAccounts.hpp  Port.cpp  Port.hpp
src/Client/Network/Helper/: 1  1.cpp  Utils.cpp  Utils.hpp
src/Server/: README  main.cpp  router.js  run.js  server
src/Server/db/: accounts.dump  main.js
trash/: camera2.cpp  client.cpp  if  if.cpp  main.cpp  rec.cpp  server.cpp
(+9 files in other folders)
